---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ????
  Changes:
    - Remote Interface:
      - object_name -> object
      - When opening a material GUI, the object must be specified as a table with the type of material, then the name. See the documentation for more information.
  Bugfixes:
    - Fixed that items and fluids with identical names would conflict

---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2020-03-20
  Changes:
    - Materials that aren't used in any recipes are excluded from the Recipe Book
    - Significantly optimized GUI construction and update logic (it is now over 4x faster!)
    - Removed mod GUI button, it is replaced by a shortcut
    - Replaced the chef hat book icon with a proper "search recipe book" icon
    - Refactored search loop to make adding more features easier
    - Removed lualib and made it a separate mod, RaiLuaLib, that this mod now depends on
  Bugfixes:
    - Fixed crash when a clicking an object with rich text in the name (Krastorio 2)
    - Fixed GUI alignment issues caused by style changes in 0.18.13
    - Fixed potential issues with conditionally registered handlers losing their correlations with custom mod events when configuration changes
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2020-03-08
  Features:
    - Added a function to the remote interface to return the current API version
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2020-02-15
  Bugfixes:
    - Fixed a crash when opening a material from the recipe page (bad pattern matching)
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2020-02-12
  Bugfixes: