@@ -109,7 +109,7 @@ gui.handlers:extend{search={
         if gui_data.category == 'material' then
           object_name = {object_class, object_name}
         end
-        event.raise(open_gui_event, {player_index=e.player_index, gui_type=category, object=object_name, source_data={mod_name='RecipeBook',
+        event.raise(OPEN_GUI_EVENT, {player_index=e.player_index, gui_type=category, object=object_name, source_data={mod_name='RecipeBook',
           gui_name='search', category=gui_data.category, query=gui_data.search_textfield.text, selected_index=e.element.selected_index}})
         if e.keyboard_confirm then
           self.close(game.get_player(e.player_index), player_table)
